1.16-2.0.12:
- By default the storage scanner will no longer be able to scan inventories that don't belong to the player that placed the storage scanner. There is a new scannerNoRestrictions configuration flag that you can use to go back to the old behaviour

1.16-2.0.11:
- The crafting grid in the modular storage and storage scanner shows the missing items again
- Fixed a few tooltip problems in the modular storage block

1.16-2.0.10:
- Fixed a problem with the crafting grids on the modular storage and storage scanner. They would not allow storing recipes anymore
- Fixed crafting in the modular storage or storage scanner with recipes that don't take up the full 3x3 grid

1.16-2.0.9:
- Update for McJtyLib tooltip rendering

1.16-2.0.8:
- Fixed JEI messing with the crafting grid part of the modular storage and storage scanner
- Fixed a problem with tags for crafting in both the modular storage and storage scanner. i.e. a furnace can now be crafted from different types of cobblestone
- Fixed a gui problem with modular storage with smaller fonts
- Also locked the crafting grid

1.16-2.0.7:
- Added back support for the XNet channel support
- To avoid an interaction bug with inventory tweaks the modular storage system has been modified to use a locking system where you have to lock you storage item before you can use the modular storage
- The modular storage block can now actually use up to the right amount (so 100 items instead of only 97)

1.16-2.0.6:
- Fixed a problem with upgrading storage modules. The contents would be lost
- New 'rftoolsstorage restore' command that you can use to restore a lost modular storage card

1.16-2.0.5:
- Update to latest McJtyLib

1.16-2.0.4-beta:
- Fixed a potential crash with the storage module item when hovering over it

2.0.3-beta:
- Fixed a problem on servers

2.0.2-beta:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

2.0.1-beta:
- Fixed a potential exploit which could be used to attack a server
