@@ -1,3 +1,6 @@
+Upcoming:
+- The storage scanner uses a better fake player that matches the name of the real player if online
+
 1.16-2.0.12:
 - By default the storage scanner will no longer be able to scan inventories that don't belong to the player that placed the storage scanner. There is a new scannerNoRestrictions configuration flag that you can use to go back to the old behaviour
 
